--- a/components.json
+++ b/components.json
@@ -10,7 +10,7 @@
     "cssVariables": true
   },
   "aliases": {
-    "components": "~/ui",
+    "components": "~/components/ui",
     "utils": "~/lib/utils/index.ts"
   }
 }
